# botc_ai_mvp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  NOTICE.md  README.md  README.zh-TW.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.ps1  run.sh
.pnpm-store/v11/: index.db
alembic/: env.py
alembic/versions/: 0001_initial.py
botc_ai/: __init__.py  settings.py
botc_ai/ai/: provider.py  schemas.py
botc_ai/api/: app.py  schemas.py
botc_ai/domain/: ai_brain.py  artist.py  claim_parser.py  context.py  engine.py  models.py  role_knowledge.py  roles.py  rules.py  sessions.py  setup.py  storyteller.py  usage.py
botc_ai/infra/: db.py  orm.py  repository.py
config/: model-pricing.json
docs/: architecture.md  deployment-public.md  game-rules.md  implementation-plan.md  information-isolation.md  known-limitations.md  multiplayer-roadmap.md  public-platform-hardening.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/test/: app.test.tsx  fixtures.ts  smoke.test.tsx
scripts/: smoke.py
tests/: conftest.py
tests/integration/: test_game_flow.py
tests/unit/: test_ai_brain.py  test_ai_provider.py  test_claim_parser.py  test_information_security.py  test_nomination_voting.py  test_phase_timing.py  test_roles.py  test_setup.py  test_win_conditions.py
