[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "botc-ai-mvp"
version = "0.1.0"
description = "Local six-player No Greater Joy BOTC fan project with isolated AI players."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "httpx>=0.27",
  "openai>=1.54",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools.packages.find]
include = ["botc_ai*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
packages = ["botc_ai"]
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["openai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
